syntax = "proto3";

package authservice.auth;
option go_package = "authservice/pkg/protobuff/api/auth";

// Message for new Authentication Request
message AuthRequest {
    string email = 1;
    string password = 2;
}

// Message for retrieving Authentication Response
message AuthResponse {
    int32 id = 1;
    string token = 2;
    string email = 3;
}