syntax = "proto3";

package authservice.user;
option go_package = "authservice/pkg/protobuff/api/user";

message UserDetails {
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message UpdateUserRequest {
    string name = 1;
    string password = 3;
}

